2005-09-19  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:

	Add another mime alias.

2005-09-19  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c: (_ephy_window_set_context_event),
	(_ephy_window_unset_context_event), (embed_popup_deactivate_cb),
	(show_embed_popup), (ephy_window_dispose):
	* src/ephy-window.h:

	Make the methods to unset/release the context event semi-public.

2005-09-16  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* src/bookmarks/ephy-bookmark-action.c:
	(bookmark_activate_with_flags), (open_in_tab_activate_cb),
	(open_in_window_activate_cb), (activate_cb):
	* src/bookmarks/ephy-bookmarks.c: (impl_resolve_address):
	Repair the previous b0rkage, see previous log

2005-09-15  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks.c: (impl_resolve_address):
	If the search term is empty for a smart bookmark use the normal
	URL instead of the smart url with the %s replaced by ""

2005-09-15  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GtkNSSDialog.cpp:

	Don't focus the checkbox initially. Fixes bug #163371.

2005-09-15  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-toolbar-editor.c: (ephy_toolbar_editor_construct):

	Make Close the default button.

2005-09-14  Christian Persch  <chpe@cvs.gnome.org>

	* src/window-commands.c: (window_cmd_help_about):

	Set "website-label" property.

2005-09-09  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphySingle.cpp:

	Manually emit the "profile-change-net-teardown" notification;
	works around bug https://bugzilla.mozilla.org/show_bug.cgi?id=292699.

2005-09-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyUtils.cpp:

	Remove unused code.

2005-09-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GlobalHistory.cpp:
	* embed/ephy-history.h:

	Implement [SG]etGeckoURIFlags for gecko 1.9.

2005-09-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyUtils.cpp:
