@@ -51,7 +51,8 @@ typedef enum
 	EPHY_EMBED_STATE_IS_REQUEST	= 1 << 5,
 	EPHY_EMBED_STATE_IS_DOCUMENT	= 1 << 6,
 	EPHY_EMBED_STATE_IS_NETWORK	= 1 << 7,
-	EPHY_EMBED_STATE_IS_WINDOW	= 1 << 8
+	EPHY_EMBED_STATE_IS_WINDOW	= 1 << 8,
+	EPHY_EMBED_STATE_RESTORING	= 1 << 9
 } EphyEmbedNetState;
 
 typedef enum
