@@ -929,6 +929,9 @@ mozilla_embed_net_state_all_cb (GtkMozEmbed *embed, const char *aURI,
 		{ GTK_MOZ_EMBED_FLAG_IS_REQUEST, EPHY_EMBED_STATE_IS_REQUEST },
 		{ GTK_MOZ_EMBED_FLAG_IS_DOCUMENT, EPHY_EMBED_STATE_IS_DOCUMENT },
 		{ GTK_MOZ_EMBED_FLAG_IS_NETWORK, EPHY_EMBED_STATE_IS_NETWORK },
+#ifdef HAVE_GECKO_1_8
+		{ GTK_MOZ_EMBED_FLAG_RESTORING, EPHY_EMBED_STATE_RESTORING },
+#endif
 		{ 0, EPHY_EMBED_STATE_UNKNOWN }
 	};
 
