@@ -1,5 +1,13 @@
 2005-09-19  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/ephy-embed.h:
+	* embed/mozilla/mozilla-embed.cpp:
+
+	Add EPHY_EMBED_STATE_RESTORING and conversion from
+	GTK_MOZ_EMBED_FLAG_RESTORING.
+
+2005-09-19  Christian Persch  <chpe@cvs.gnome.org>
+
 	* data/mime-types-permissions.xml:
 
 	Add another mime alias.
